# PuzzleVisualizer

./: .gitignore  README.md  draft.ipynb  pyproject.toml
interactive/: task_animation.py
static/: task_schematic.py
